BUG-DFC-13369-Checkbox spacing is excessive
Style changes for
- Gap between checkboxes
- Radio buttons inline hack

--- a/src/gds_service_toolkit/assets/src/frontend/sass/patterns/psf.scss
+++ b/src/gds_service_toolkit/assets/src/frontend/sass/patterns/psf.scss
@@ -49,7 +49,6 @@
         font-size: 16px;
         line-height: 1.25;
         display: block;
-        margin-bottom: 15px;
         color: #505a5f;
 
         @media (min-width: 40.0625em) {
@@ -355,6 +354,20 @@
     }
     .filter-results-header {
         width: 100%;
+    }
+  }
+
+  .govuk-checkboxes {
+    .govuk-radios--inline {
+      float:left;
+    }
+  }
+
+@media (max-width: 640px) {
+  .govuk-checkboxes {
+    .govuk-radios--inline {
+      float:none;
+      margin-top:15px;
     }
   }
 }
